--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
   </head>
-
+  
   <body>
-    <h1>Nick</h1>
+    <h1 class="nick">Nick</h1>
     <div class="wrapper">
       <!-- your code here! -->
     </div>
