automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,10 +42,18 @@
         <h2>Press</h2>
 
           <span>
-            <img src="images/nmai-logo.png" alt="NMAI Logo">
-            <img src="images/times-logo.png" alt="Times Logo">
-            <img src="images/sedona-logo.png" alt="Sedona Logo">
-            <img src="images/bergdorf-logo.png" alt="Bergdorf Logo">
+            <a href="https://americanindian.si.edu/home/">
+              <img src="images/nmai-logo.png" alt="NMAI Logo">
+            </a>
+            <a>
+              <img src="images/times-logo.png" alt="Times Logo">
+            </a>
+              <a>
+              <img src="images/sedona-logo.png" alt="Sedona Logo">
+            </a>
+            <a>
+              <img src="images/bergdorf-logo.png" alt="Bergdorf Logo">
+            </a>
           </span>
 
 
