automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
         <h2>Press</h2>
 
           <span>
-            <a href="https://americanindian.si.edu/home/">
+            <a href="https://americanindian.si.edu/home/" target="_blank">
               <img src="images/nmai-logo.png" alt="NMAI Logo">
             </a>
-            <a>
+            <a href="https://www.nytimes.com/section/t-magazine" target="_blank">
               <img src="images/times-logo.png" alt="Times Logo">
             </a>
-              <a>
+              <a href="https://www.sedonamonthly.com/" target="_blank">
               <img src="images/sedona-logo.png" alt="Sedona Logo">
             </a>
-            <a>
+            <a href="https://www.bergdorfgoodman.com/" target="_blank">
               <img src="images/bergdorf-logo.png" alt="Bergdorf Logo">
             </a>
           </span>
