automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -43,18 +43,22 @@
 
           <span>
             <a href="https://americanindian.si.edu/home/" target="_blank">
-              <img src="images/nmai-logo.png" border="0" alt="NMAI Logo">
+              <img src="images/nmai-logo.png" alt="NMAI Logo">
             </a>
             <a href="https://www.nytimes.com/section/t-magazine" target="_blank">
-              <img src="images/times-logo.png" border="0" alt="Times Logo">
+              <img src="images/times-logo.png" alt="Times Logo">
             </a>
               <a href="https://www.sedonamonthly.com/" target="_blank">
-              <img src="images/sedona-logo.png" border="0" alt="Sedona Logo">
+              <img src="images/sedona-logo.png" alt="Sedona Logo">
             </a>
             <a href="https://www.bergdorfgoodman.com/" target="_blank">
-              <img src="images/bergdorf-logo.png" border="0" alt="Bergdorf Logo">
+              <img src="images/bergdorf-logo.png" alt="Bergdorf Logo">
             </a>
           </span>
+
+        <footer>
+          &copy; 2014 Zetsy, All Rights Reserved.
+        </footer>
 
 
 
