automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </span>
 
         <footer>
-          &copy; 2014 Zetsy, All Rights Reserved.
+          <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
         </footer>
 
 
