automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <!-- your code here! -->
       <h1>Zetsy</h1>
 
+      <section id="featured">
+
       <img src="images/necklace.jpg" alt="Necklace">
 
       <h2>About</h2>
@@ -39,6 +41,10 @@
           States and Europe and is carried by the retail stores of Bergdorf Goodman.
         </p>
 
+      </section>
+
+      <section id="press">
+
         <h2>Press</h2>
 
           <span>
@@ -55,9 +61,10 @@
               <img src="images/bergdorf-logo.png" alt="Bergdorf Logo">
             </a>
           </span>
+        </section>
 
         <footer>
-          <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+          <p class="footer">&copy; 2014 Zetsy, All Rights Reserved.</p>
         </footer>
 
 
