--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-      <h1>Zetsy</h1>
+      <header>
+      <a href="#">Zetsy</a>
+    </header>
 
       <section id="featured">
 
