automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <section id="featured">
 
-      <img src="images/necklace.jpg" alt="Necklace">
+      <img src="images/necklace.jpg" alt="hand crafted Arizona Navajo turquoise stone necklace">
 
       <h2>About</h2>
         <p>
