automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <header>
       <a href="#">Zetsy</a>
     </header>
+    <!-- Featured -->
       <section id="featured">
         <img src="images/necklace.jpg" alt="hand crafted Arizona Navajo turquoise stone necklace">
         <h2>About</h2>
@@ -31,7 +32,7 @@
             bone, antler, and possibly marine shell beads from 7000 BCE were
             found in Russell Cave in Alabama; copper jewelry was traded from
             Lake Superior beginning in 3000 BCE; and stone beads were carved in
-            Poverty Point in Louisiana in 1500 BCE. 
+            Poverty Point in Louisiana in 1500 BCE.
             <a href="https://en.wikipedia.org/wiki/Native_American_jewelry" target="_blank">
               Learn more.
             </a>
@@ -43,7 +44,8 @@
             States and Europe and is carried by the retail stores of Bergdorf Goodman.
           </p>
       </section>
-      <section id="press">
+      <!-- links -->
+      <section id="links">
         <h2>Press</h2>
           <span>
             <a href="https://americanindian.si.edu/home/" target="_blank">
