--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </a>
           </span>
         </section>
+        <!-- Footer -->
         <footer>
           <p class="footer">&copy; 2014 Zetsy, All Rights Reserved.</p>
         </footer>
