automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -46,24 +46,23 @@
             States and Europe and is carried by the retail stores of Bergdorf Goodman.
           </p>
       </section>
-      <!-- links -->
-      <section id="links">
+      <!-- Press -->
+      <section id="press">
+
         <h2>Press</h2>
-          <span>
-            <a href="https://americanindian.si.edu/home/" target="_blank">
-              <img src="images/nmai-logo.png" alt="NMAI Logo">
-            </a>
-            <a href="https://www.nytimes.com/section/t-magazine" target="_blank">
-              <img src="images/times-logo.png" alt="Times Logo">
-            </a>
-              <a href="https://www.sedonamonthly.com/" target="_blank">
-              <img src="images/sedona-logo.png" alt="Sedona Logo">
-            </a>
-            <a href="https://www.bergdorfgoodman.com/" target="_blank">
-              <img src="images/bergdorf-logo.png" alt="Bergdorf Logo">
-            </a>
-          </span>
-        </section>
+        <a href="http://nmai.si.edu/home/" target="_blank">
+          <img src="images/nmai-logo.png"
+           alt="National Museum of the American Indian">
+         </a> 
+         <a href="http://www.nytimes.com/pages/t-magazine/" target="_blank">
+           <img src="images/times-logo.png" alt="The New York Times Style"></a> 
+           <a href="http://www.sedonamonthly.com" target="_blank">
+             <img src="images/sedona-logo.png" alt="Sedona Monthly">
+           </a> 
+           <a href="http://www.bergdorfgoodman.com/" target="_blank">
+             <img src="images/bergdorf-logo.png" alt="Begdorf Goodman">
+           </a>
+
         <!-- Footer -->
         <footer>
           <p class="footer">&copy; 2014 Zetsy, All Rights Reserved.</p>
