automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="wrapper">
-      <!-- your code here! -->
+      
     <header>
       <h1>
       <a href="#">Zetsy</a>
@@ -62,6 +62,8 @@
            <a href="http://www.bergdorfgoodman.com/" target="_blank">
              <img src="images/bergdorf-logo.png" alt="Begdorf Goodman">
            </a>
+
+         </section>
 
         <!-- Footer -->
         <footer>
