--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="wrapper">
 
     <header>
-      <h1>
-      <a href="#">Zetsy</a>
-    </h1>
+      <h1><a href="#">Zetsy</a></h1>
     </header>
-    <!-- Featured -->
+  
       <section id="featured">
+        
         <img src="images/necklace.jpg" alt="hand crafted Arizona Navajo turquoise stone necklace">
+        
         <h2>About</h2>
           <p>
             Mary Wanesia is a jeweler, an Arizona native, and a member of the
@@ -45,8 +45,8 @@
             Magazine, and Sedona Monthly. The collection is sold across the United
             States and Europe and is carried by the retail stores of Bergdorf Goodman.
           </p>
-      </section>
-      <!-- Press -->
+      </section> <!-- #featured -->
+
       <section id="press">
 
         <h2>Press</h2>
@@ -63,7 +63,7 @@
              <img src="images/bergdorf-logo.png" alt="Begdorf Goodman">
            </a>
 
-         </section>
+         </section> <!-- #press -->
 
         <!-- Footer -->
         <footer>
