--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
       <h1><a href="#">Zetsy</a></h1>
     </header>
-  
+
       <section id="featured">
-        
+
         <img src="images/necklace.jpg" alt="hand crafted Arizona Navajo turquoise stone necklace">
-        
+
         <h2>About</h2>
           <p>
             Mary Wanesia is a jeweler, an Arizona native, and a member of the
@@ -50,18 +50,7 @@
       <section id="press">
 
         <h2>Press</h2>
-        <a href="http://nmai.si.edu/home/" target="_blank">
-          <img src="images/nmai-logo.png"
-           alt="National Museum of the American Indian">
-         </a>
-         <a href="http://www.nytimes.com/pages/t-magazine/" target="_blank">
-           <img src="images/times-logo.png" alt="The New York Times Style"></a>
-           <a href="http://www.sedonamonthly.com" target="_blank">
-             <img src="images/sedona-logo.png" alt="Sedona Monthly">
-           </a>
-           <a href="http://www.bergdorfgoodman.com/" target="_blank">
-             <img src="images/bergdorf-logo.png" alt="Begdorf Goodman">
-           </a>
+      <a href="http://nmai.si.edu/home/" target="_blank"><img src="images/nmai-logo.png" alt="National Museum of the American Indian"></a> <a href="http://www.nytimes.com/pages/t-magazine/" target="_blank"><img src="images/times-logo.png" alt="The New York Times Style"></a> <a href="http://www.sedonamonthly.com" target="_blank"><img src="images/sedona-logo.png" alt="Sedona Monthly"></a> <a href="http://www.bergdorfgoodman.com/" target="_blank"><img src="images/bergdorf-logo.png" alt="Begdorf Goodman"></a>
 
          </section> <!-- #press -->
 
