--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <section id="press">
 
         <h2>Press</h2>
-        
-        <a href="http://nmai.si.edu/home/" target="_blank">
+
+        <!-- <a href="http://nmai.si.edu/home/" target="_blank">
           <img src="images/nmai-logo.png" alt="National Museum of the American Indian">
          </a>
          <a href="http://www.nytimes.com/pages/t-magazine/" target="_blank">
@@ -62,20 +62,20 @@
          </a>
          <a href="http://www.bergdorfgoodman.com/" target="_blank">
            <img src="images/bergdorf-logo.png" alt="Begdorf Goodman">
-         </a>
+         </a> -->
 
            <!-- -->
-           <!-- <a href="http://nmai.si.edu/home/" target="_blank">
+           <a href="http://nmai.si.edu/home/" target="_blank">
              <img src="images/nmai-logo.png" alt="National Museum of the American Indian">
-           </a> 
+           </a>
            <a href="http://www.nytimes.com/pages/t-magazine/" target="_blank">
              <img src="images/times-logo.png" alt="The New York Times Style">
-           </a> 
+           </a>
            <a href="http://www.sedonamonthly.com" target="_blank">
              <img src="images/sedona-logo.png" alt="Sedona Monthly">
-           </a> 
+           </a>
            <a href="http://www.bergdorfgoodman.com/" target="_blank">
-             <img src="images/bergdorf-logo.png" alt="Begdorf Goodman"> -->
+             <img src="images/bergdorf-logo.png" alt="Begdorf Goodman">
            </a>
            <!-- -->
 
