automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <!-- Footer -->
         <footer>
-          <p class="footer">&copy; 2014 Zetsy, All Rights Reserved.</p>
+          <p class="small">&copy; 2014 Zetsy, All Rights Reserved.</p>
         </footer>
 
 
